Closed
Bug 207330
Opened 23 years ago
Closed 23 years ago
nsHTMLDocument::TryChannelCharset should use do_GetService (like everyone else) to get @mozilla.org/intl/charsetalias;1
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
Details
(Keywords: assertion)
Attachments
(1 file)
|
844 bytes,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
WARNING: You are calling CreateInstance "{98d41c21-ccf3-11d2-b3b1-00805f8a6670}"
when a service for this CID already exists!, file
i:/build/mozilla/xpcom/components/nsComponentManager.cpp, line 1962
nsComponentManagerImpl::CreateInstance(nsComponentManagerImpl * const
0x0043dc10, const nsID & {...}, nsISupports * 0x00000000, const nsID & {...},
void * * 0x0012b8f4) line 1962 + 24 bytes
nsCreateInstanceByCID::operator()(const nsID & {...}, void * * 0x0012b8f4) line
55 + 45 bytes
nsCOMPtr<nsICharsetAlias>::assign_from_helper(const nsCOMPtr_helper & {...},
const nsID & {...}) line 988 + 18 bytes
nsCOMPtr<nsICharsetAlias>::nsCOMPtr<nsICharsetAlias>(const nsCOMPtr_helper &
{...}) line 561
nsHTMLDocument::TryChannelCharset(nsIChannel * 0x0ba5f218, int & 0, nsAString &
{...}) line 664
{98d41c21-ccf3-11d2-b3b1-00805f8a6670},@mozilla.org/intl/charsetalias;1,,Charset
Alias Information,rel:uconv.dll
Attachment #124354 -
Flags: superreview?(bz-bugspam)
Attachment #124354 -
Flags: review?(bz-bugspam)
Updated•23 years ago
|
Attachment #124354 -
Flags: superreview?(bz-bugspam)
Attachment #124354 -
Flags: superreview+
Attachment #124354 -
Flags: review?(bz-bugspam)
Attachment #124354 -
Flags: review+
checked in
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Component: DOM: HTML → DOM: Core & HTML
QA Contact: desale → general
You need to log in
before you can comment on or make changes to this bug.
Description
•