Bug 207330 nsHTMLDocument::TryChannelCharset should use do_GetService (like everyone else) to get @mozilla.org/intl/charsetalias;1 r=bz sr=bz